# Multi-Modal-RAG

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py
src/api/: main.py
src/api/middleware/: auth.py  logging.py  metrics.py
src/api/routes/: documents.py  health.py  search.py
src/core/: config.py  constants.py  exceptions.py
src/embeddings/: base.py  code_encoder.py  image_encoder.py  multi_modal.py  table_encoder.py  text_encoder.py
src/generation/: citation_tracker.py  llm_client.py  prompt_builder.py
src/ingestion/: base.py  code_parser.py  document_parser.py  image_processor.py  pipeline.py
src/retrieval/: hybrid_search.py  query_processor.py  reranker.py  vector_store.py
tests/: test_integration.py
